--- a/Parking.vcxproj
+++ b/Parking.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Parking.cpp" />
+    <ClCompile Include="parkingLot.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="parkingLot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
