--- a/Parking.vcxproj.filters
+++ b/Parking.vcxproj.filters
@@ -28,8 +28,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="parkingLots.json">
+    <Text Include="ParkingLots.txt">
       <Filter>Source Files</Filter>
-    </None>
+    </Text>
   </ItemGroup>
 </Project>
