--- a/Parking.vcxproj
+++ b/Parking.vcxproj
@@ -146,7 +146,7 @@
     <ClInclude Include="parkingLot.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="parkingLots.json" />
+    <Text Include="ParkingLots.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
